RESOLVED FIXED 58425
[chromium] Fix canvas.toDataURL mimeType assertion
https://bugs.webkit.org/show_bug.cgi?id=58425
Summary [chromium] Fix canvas.toDataURL mimeType assertion
noel gordon
Reported 2011-04-13 02:35:47 PDT
Fix canvas.toDataURL mimeType assertion.
Attachments
Patch (1.91 KB, patch)
2011-04-13 02:38 PDT, noel gordon
no flags
noel gordon
Comment 1 2011-04-13 02:38:30 PDT
Kenneth Russell
Comment 2 2011-04-13 11:20:32 PDT
Comment on attachment 89355 [details] Patch This looks good to me; thanks for the fix.
WebKit Commit Bot
Comment 3 2011-04-13 17:25:24 PDT
Comment on attachment 89355 [details] Patch Clearing flags on attachment: 89355 Committed r83790: <http://trac.webkit.org/changeset/83790>
WebKit Commit Bot
Comment 4 2011-04-13 17:25:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.