2011-04-13  Noel Gordon  <noel.gordon@gmail.com>

Reviewed by Kenneth Russell.

        [chromium] Fix canvas.toDataURL mimeType assertion
        https://bugs.webkit.org/show_bug.cgi?id=58425

        Following r81213, reassert expected toDataURL() mimeType, remove an unused variable.

        No new tests. Covered by existing tests.

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageToDataURL):
        (WebCore::ImageBuffer::toDataURL):

Canonical link: https://commits.webkit.org/73547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83790 268f45cc-cd09-0410-ab3c-d52691b4dbfc